* svn *
 * (07-12-11) Lemonpen support added.
 * (07-12-11) Finally slugger get the THEMEs. you can reuse mephisto's themes with a little effort.
 * (07-12-11) Added /pages/search.
 * (07-11-22) Source code highligher script added. Thanks to Alan Kang.
 * (07-11-22) Pingback implatation changed. Instead of ActionWebservice framework I use xmlrpc library. It's because some compatibility issues between edgerails and ActionWebservice.
 * (07-11-21) pingback 1.0 request can be received.
 * (07-11-20) prepend http protocol to comment author's link if neeeded.
 * (07-11-20) Print detailed messages during the initialization process.
 * (07-11-20) Slugger now distributed with its own api keys.
 * (07-11-20) API setting files(me2day.yml, springnote.yml) are deleted and now settings.yml contains all configurations.
 * (07-08-04) Added support for google analytics. Perhaps what we need is the plugin system.
 * (07-08-04) Caches now can handle paginations.
 * (07-08-04) me2day user configuration for post and comments now seperated.