@@ -1,5 +1,5 @@
 class Site
-  liquid_methods :title, :subtitle, :theme, :feed_path, :home_url, :sidebar, :google_analytics, :lemonpen_sid, :theme_name
+  liquid_methods :title, :subtitle, :theme, :feed_path, :home_url, :sidebar, :google_analytics, :lemonpen_sid, :theme_name, :allow_trackback?, :allow_trackback
   
   def method_missing(name)
     SITE_SETTINGS[name.to_s]
@@ -11,6 +11,10 @@ class Site
   
   def sidebar
     Page.side
+  end
+  
+  def allow_trackback?
+    allow_trackback.to_s != 'false'
   end
 
   class <<self
