@@ -22,7 +22,7 @@
             <h2>{{ site.subtitle }}</h2>
           </div>
           <div id="search">
-            <form method="get" id="sform" action="/pages/search">
+            <form method="get" id="sform" action="{{ search_path }}">
               <div class="searchimg"></div>
               <input type="text" id="q" value="" name="q" size="15" />
             </form>
